--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 			<a class="logo" href=""><span class="logo-blue">Web</span>Studio</a>
 	<ul class="list-header">
 		<li class="item-header"><a class="link-header" href="">Студия</a></li>
-		<li class="item-header"><a class="link-header" href="">Портфолио</a></li>
+		<li class="item-header"><a class="link-header portfolio" href="">Портфолио</a></li>
 		<li class="item-header"><a class="link-header" href="">Контакты</a></li>
 	</ul>
 </nav>
@@ -44,64 +44,110 @@
 			<li class="item-btn"><button type="button" class="btn">Маркетинг</button></li>
 		</ul>
 	<ul class="list">
+		
 		<li class="item">
+			<div class="portfolio-item-wrap">
 				<img src="images/img.jpg" alt="ноутбук" width="368" height="294">
+			<p class="portfolio-item-text">Технокряк это современная площадка распространения коронавируса.
+			 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+			</p>
+		</div>
 			<div class="div-text">
 				<h2 class="title">Технокряк</h2>
 				<p class="text">Веб-сайт</p>
 			</div>
 		</li>
 		<li class="item">
+			<div class="portfolio-item-wrap">
 				<img src="images/img2.jpg" alt="баскетбол" width="368" height="294">
+				<p class="portfolio-item-text">Технокряк это современная площадка распространения коронавируса.
+			 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+			</p>
+			</div>
 			<div class="div-text">
 				<h2 class="title">Постер New Orlean vs Golden Star</h2>
 				<p class="text">Дизайн</p>
 			</div>
 		</li>
 		<li class="item">
+			<div class="portfolio-item-wrap">
 				<img src="images/img3.jpg" alt="лого ресторана" width="368" height="294">
+				<p class="portfolio-item-text">Технокряк это современная площадка распространения коронавируса.
+			 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+			</p>
+			</div>
 			<div class="div-text">
 				<h2 class="title">Ресторан Seafood</h2>
 				<p class="text">Приложение</p>
 			</div>
 		</li>
 		<li class="item">
+			<div class="portfolio-item-wrap">
 				<img src="images/img4.jpg" alt="наушники" width="368" height="294">
+				<p class="portfolio-item-text">Технокряк это современная площадка распространения коронавируса.
+			 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+			</p>
+			</div>
 			<div class="div-text">
 				<h2 class="title">Проект Prime</h2>
 				<p class="text">Маркетинг</p>
 			</div>
 		</li>
 		<li class="item">
+			<div class="portfolio-item-wrap">
 				<img src="images/img5.jpg" alt="коробки" width="368" height="294">
+				<p class="portfolio-item-text">Технокряк это современная площадка распространения коронавируса.
+			 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+			</p>
+			</div>
 			<div class="div-text">
 				<h2 class="title">Проект Boxes</h2>
 				<p class="text">Приложение</p>
 			</div>
 		</li>
 		<li class="item">
+			<div class="portfolio-item-wrap">
 				<img src="images/img6.jpg" alt="монитор" width="368" height="294">
+				<p class="portfolio-item-text">Технокряк это современная площадка распространения коронавируса.
+			 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+			</p>
+			</div>
 			<div class="div-text">
 				<h2 class="title">Inspiration has no Borders</h2>
 				<p class="text">Веб-сайт</p>
 			</div>
 		</li>
 		<li class="item">
+			<div class="portfolio-item-wrap">
 				<img src="images/img7.jpg" alt="журнал" width="368" height="294">
+				<p class="portfolio-item-text">Технокряк это современная площадка распространения коронавируса.
+			 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+			</p>
+			</div>
 			<div class="div-text">
 				<h2 class="title">Издание Limited Edition</h2>
 				<p class="text">Дизайн</p>
 			</div>
 		</li>
 		<li class="item">
+			<div class="portfolio-item-wrap">
 				<img src="images/img8.jpg" alt="бирка" width="368" height="294">
+				<p class="portfolio-item-text">Технокряк это современная площадка распространения коронавируса.
+			 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+			</p>
+			</div>
 			<div class="div-text">
 				<h2 class="title">Проект LAB</h2>
 				<p class="text">Маркетинг</p>
 			</div>
 		</li>
 		<li class="item">
+			<div class="portfolio-item-wrap">
 				<img src="images/img9.jpg" alt="печать на клавиатуре" width="368" height="294">
+				<p class="portfolio-item-text">Технокряк это современная площадка распространения коронавируса.
+			 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+			</p>
+			</div>
 			<div class="div-text">
 				<h2 class="title">Growing Business</h2>
 				<p class="text">Приложение</p>
@@ -158,5 +204,6 @@
 		</div>
 		</div>
 	</footer>
+	 <script src="./js/modal.js"></script>
 </body>
 </html>
