--- a/index.html
+++ b/index.html
@@ -85,11 +85,21 @@
 		<div class="container">
 			<h2 class="what-we-do-title">Чем мы занимаемся</h2>
 		<ul class="wwd-list">
-			<li class="wwd-item"><img src="images/wwd1.jpg" alt="Написание кода" width="370" height="294"></li>
-			<li class="wwd-item"><img src="images/wwd2.jpg" alt="Разработка мобильного приложения" width="370" height="294"></li>
-			<li><img src="images/wwd3.jpg" alt="Графический планшет" width="370" height="294"></li>
+			<li class="wwd-item"><div class="wwd-wrapper">
+				<img src="images/wwd1.jpg" alt="Написание кода" width="370" height="294">
+				<p class="wwd-img-text">Десктопные приложения</p></div></li>
+			<li class="wwd-item"><div class="wwd-wrapper">
+				<img src="images/wwd2.jpg" alt="Разработка мобильного приложения" width="370" height="294">
+				<p class="wwd-img-text">Мобильные приложения</p>
+			</div>
+			</li>
+			<li><div class="wwd-wrapper">
+				<img src="images/wwd3.jpg" alt="Графический планшет" width="370" height="294">
+				<p class="wwd-img-text">Дизайнерские решения</p>
+			</div>
+			</li>
 		</ul>
-		</div>	
+		</div>
 	</section>
 	<section class="our-team">
 		<div class="container">
